--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -150,6 +150,15 @@
             border-radius: 0px 15px 15px 0px;
         }
     }
+
+    @media (min-width: 993px){
+        #home{
+            border-radius: 15px 0px 0px 15px;
+        }
+        #contatti{
+            border-radius: 0px 15px 15px 0px;
+        }
+    }
     /* Navbar per schermi piccoli */
     @media (max-width: 992px) {
         .navbar {
