Fine grafica inserimento comunicazioni

--- a/HTML/VisualizzaComunicazioni/main.html
+++ b/HTML/VisualizzaComunicazioni/main.html
@@ -54,10 +54,10 @@
 <style>
     /* Stili personalizzati per la visualizzazione della comunicazione */
     #BoxAnteprimaVisualizzazioneComunicazione {
-        padding: 20px;
-        background-color: #f8f9fa;
-        border: 1px solid #dee2e6;
-        border-radius: 8px;
+        max-width: 30.26344rem;
+        min-height: 40.9375rem;
+        border-radius: 0.9375rem;
+        border: 2.5px solid #FFF;
         height: 100%;
     }
 
@@ -100,11 +100,14 @@
     }
 
     #MainVisualizzazioneComunicazioneAnteprima {
-        padding: 20px;
-        background-color: #333;
-        color: #FFF;
-        font-size: 18px;
+        height: 100%;
+        background-color: #205295;;
         text-align: justify;
+        color: #FFF;
+        font-family: 'OutFit', sans-serif;
+        font-size: 35px;
+        font-style: normal;
+        font-weight: 400;
         word-break: break-word;
         /* Spezza le parole lunghe per andare a capo */
         overflow-wrap: break-word;
