Fine grafica visualizza comunicazioni, inizio componenti aggiuntivi

--- a/HTML/InserimentoComunicazione/main.html
+++ b/HTML/InserimentoComunicazione/main.html
@@ -338,7 +338,7 @@
     #AnteprimaComunicazione,
     #UltimaComunicazione {
         max-width: 484.215px;
-        min-height: 40.9375rem;
+        max-height: 40.9375rem;
         background-color: transparent;
         border: 2.5px solid #FFF;
         background: #205295;
@@ -346,9 +346,7 @@
         height: 100%;
     }
 
-    #BoxAnteprimaComunicazione{
-        transform: translateX(5%);
-    }
+
 
     #NumeroComunicazione,
     #TitoloComunicazione,
