--- a/HTML/VisualizzaComunicazioni/main.html
+++ b/HTML/VisualizzaComunicazioni/main.html
@@ -52,10 +52,21 @@
 <script src="js/Visualizza%20Comunicazioni/main.js"></script>
 
 <style>
+    #TestoAnteprimaVisualizzazioneComunicazione {
+        color: #FF473D;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: #232323;
+        font-family: Outfit;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+
     /* Stili personalizzati per la visualizzazione della comunicazione */
     #BoxAnteprimaVisualizzazioneComunicazione {
         max-width: 30.26344rem;
-        min-height: 40.9375rem;
+        max-height: 655px;
         border-radius: 0.9375rem;
         border: 2.5px solid #FFF;
         height: 100%;
@@ -105,7 +116,7 @@
         text-align: justify;
         color: #FFF;
         font-family: 'OutFit', sans-serif;
-        font-size: 35px;
+        font-size: 32px;
         font-style: normal;
         font-weight: 400;
         word-break: break-word;
@@ -128,6 +139,7 @@
     /* Stili per la tabella */
     #ListaComunicazioni {
         width: 100%;
+        border: 5px solid transparent;
         border-collapse: collapse;
     }
 
@@ -135,11 +147,17 @@
     #ListaComunicazioni td {
         text-align: center;
         vertical-align: middle;
+
+        color: #F4F4F4;
+        text-align: center;
+        font-family: Outfit, sans-serif;
     }
 
     #ListaComunicazioni th {
-        background-color: #004996;
-        color: white;
+        background: #005CD7;
+        color: #F4F4F4;
+        text-align: center;
+        font-family: Outfit, sans-serif;
         padding: 10px;
     }
 
@@ -152,10 +170,15 @@
         overflow-x: auto;
     }
 
+    .BottoneVisualizzaComunicazione {
+        background: #005CD7;
+        border: 0;
+    }
+
     /* Responsività */
     @media (max-width: 768px) {
-        #BoxAnteprimaVisualizzazioneComunicazione {
-            margin-bottom: 20px;
+        #AnteprimaVisualizzazioneComunicazione {
+            margin-bottom: 100px;
         }
 
         /* Gestione overflow per la tabella su schermi piccoli */
