--- a/HTML/VisualizzaComponentiAggiuntivi/main.html
+++ b/HTML/VisualizzaComponentiAggiuntivi/main.html
@@ -1,27 +1,179 @@
-<div id="AnteprimaComponente">
-    <div id="boxHeaderComponentiAggiuntivi">
-        <div id="TitoloComponentiAggiuntivi"></div>
-    </div>
-    <div id="boxImmagineComponentiAggiuntivi">
-        <img id="ImmagineComponentiAggiuntivi" src="#" alt="Al momento non è possibile visualizzare le immagini">
-    </div>
-    <div id="TestoComponentiAggiuntivi"></div>
+<div class="container-fluid">
+    <div class="row d-flex">
+        <!-- Box Anteprima Componenti Aggiuntivi -->
+        <div id="AnteprimaComponentiAggiuntivi" class="col-lg-6 col-md-12 d-flex flex-column">
+            <div id="BoxAnteprimaComponentiAggiuntivi" class="d-flex flex-column flex-grow-1">
+                <div id="boxHeaderComponentiAggiuntivi">
+                    <div id="TitoloComponentiAggiuntivi">Titolo Componente Aggiuntivo</div>
+                </div>
+                <div id="MainComponentiAggiuntivi" class="d-flex flex-grow-1">
+                    <div id="TestoComponentiAggiuntivi">
+                        Questo è il testo del componente aggiuntivo visualizzato in anteprima.
+                    </div>
+                    <div id="boxImmagineComponentiAggiuntivi">
+                        <img id="ImmagineComponentiAggiuntivi" src="#" alt="Nessuna immagine disponibile">
+                    </div>
+                </div>
+                <div id="boxProfComponentiAggiuntivi">
+                    <div id="ProfComponentiAggiuntivi">Firma del docente</div>
+                </div>
+            </div>
+        </div>
 
-    <div id="boxProfComponentiAggiuntivi">
-        <div id="ProfComponentiAggiuntivi"></div>
+        <!-- Lista Componenti Aggiuntivi -->
+        <div id="ListaComponentiAggiuntivi" class="col-lg-6 col-md-12">
+            <table id="ListaComponenti" class="table table-striped table-responsive">
+                <thead>
+                    <tr>
+                        <th>Titolo</th>
+                        <th>Corpo</th>
+                        <th>Data Inizio</th>
+                        <th>Data Fine</th>
+                        <th>Docente</th>
+                        <th>Azioni</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Riempito dinamicamente -->
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
-<div id="boxTabellaComponentiAggiuntivi">
-    <table id="TabellaComponentiAggiuntivi">
-        <tr>
-            <th>Titolo</th>
-            <th>Corpo</th>
-            <th>Data Inizio</th>
-            <th>Data Fine</th>
-            <th>Docente</th>
-            <th>Azioni</th>
-        </tr>
-        <!--Riempito da JS-->
-    </table>
-</div>
+
 <script src="js/VisualizzaComponentiAggiuntivi/main.js"></script>
+
+<style>
+    /* Stili per il box di anteprima */
+    #AnteprimaComponentiAggiuntivi {
+        max-width: 100%;
+        height: auto;
+        border-radius: 15px;
+        border: 2.5px solid #E09819;
+        background: #0E284B;
+        margin-bottom: 20px;
+        padding: 0px;
+    }
+
+    #boxHeaderComponentiAggiuntivi {
+        width: 100%;
+        height: 90px;
+        background-color: #004996;
+        border-bottom: 2px solid #33B4FE;
+        border-radius: 15px 15px 0 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #TitoloComponentiAggiuntivi {
+        color: #FFF;
+        font-size: 34px;
+        font-weight: 550;
+        text-align: center;
+    }
+
+    #MainComponentiAggiuntivi {
+        display: flex;
+        padding: 20px;
+    }
+
+    #TestoComponentiAggiuntivi {
+        width: 50%;
+        color: #FFF;
+        font-size: 28px;
+        font-weight: 300;
+    }
+
+    #boxImmagineComponentiAggiuntivi {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #ImmagineComponentiAggiuntivi {
+        max-width: 90%;
+        max-height: 90%;
+        object-fit: contain;
+    }
+
+    #boxProfComponentiAggiuntivi {
+        width: 100%;
+        height: 40px;
+        background-color: #004996;
+        border-top: 2.5px solid #E09819;
+        border-radius: 0 0 15px 15px;
+        padding-right: 25px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    #ProfComponentiAggiuntivi {
+        color: #FFF;
+        font-size: 24px;
+    }
+
+    /* Stili per la tabella */
+    #ListaComponentiAggiuntivi {
+        overflow-x: auto;
+    }
+
+    #ListaComponenti {
+        width: 100%;
+        text-align: center;
+    }
+
+    #ListaComponenti th {
+        padding: 10px;
+        color: #F4F4F4;
+        background-color: #005cd7;
+    }
+
+    #ListaComponenti td {
+        padding: 10px;
+        color: #F4F4F4;
+        background-color: transparent;
+    }
+
+    #ListaComunicazioniRegistrate {
+        overflow-x: auto;
+    }
+
+    .BottoneVisualizzaComunicazione {
+        background: #005CD7;
+        border: 0;
+    }
+
+    /* Responsività */
+    @media (max-width: 768px) {
+
+        /* Box anteprima occupa tutto lo schermo, tabella sotto */
+        #AnteprimaComponentiAggiuntivi {
+            width: 100%;
+        }
+
+        #ListaComponentiAggiuntivi {
+            width: 100%;
+        }
+
+        #MainComponentiAggiuntivi {
+            flex-direction: column;
+        }
+
+        #TestoComponentiAggiuntivi,
+        #boxImmagineComponentiAggiuntivi {
+            width: 100%;
+        }
+    }
+
+    @media (min-width: 768px) {
+
+        #AnteprimaComponentiAggiuntivi,
+        #ListaComponentiAggiuntivi {
+            height: 100vh;
+            /* Mantiene i box a piena altezza dello schermo */
+        }
+    }
+</style>
