--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GESTIONE INFORMAZIONI ITI-TV</title>
-    <link rel="shortcut icon" href="img/Immagini Sito/FaviconITITV.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Immagini Sito/icona2.jpg" type="image/x-icon">
     <script src="js/jquery.js"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -112,7 +112,7 @@
         .userboxClicked {
             background-image: url(img/UI/user-hover.png);
             background-color: #479CFF;
-            
+
             /* adatto l'immagine alla dimansione del box */
             width: 100px;
             height: 100px;
@@ -130,9 +130,10 @@
             margin-top: 1rem;
             text-decoration: underline;
         }
-        #logout:hover{
+
+        #logout:hover {
             color: #FF2626;
-        } 
+        }
 
 
         /* Su schermi piccoli, sposta il titolo a sinistra */
